config-root/namespaces/jx-production/jx3-lensdevopscare-demo/jx3-lensdevopscare-demo-jx3-lensdevopscare-demo-deploy.yaml
# Source: jx3-lensdevopscare-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-lensdevopscare-demo-jx3-lensdevopscare-demo
  labels:
    draft: draft-app
    chart: "jx3-lensdevopscare-demo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx3-lensdevopscare-demo'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx3-lensdevopscare-demo-jx3-lensdevopscare-demo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-lensdevopscare-demo-jx3-lensdevopscare-demo
    spec:
      serviceAccountName: jx3-lensdevopscare-demo-jx3-lensdevopscare-demo
      containers:
        - name: jx3-lensdevopscare-demo
          image: "ghcr.io/dockerpac/jx3-lensdevopscare-demo:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
