config-root/namespaces/jx-production/jx3-lensdevopscare-demo/jx3-lensdevopscare-demo-ingress.yaml
# Source: jx3-lensdevopscare-demo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'jx3-lensdevopscare-demo'
  name: jx3-lensdevopscare-demo
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jx3-lensdevopscare-demo
                port:
                  number: 80
      host: jx3-lensdevopscare-demo-jx-production.lenscicd.pac.dockerps.io
